<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>asmeta</groupId>
		<artifactId>asmeta.all</artifactId>
		<version>0.0.1-SNAPSHOT</version>
		<relativePath>../..</relativePath>
	</parent>
	<artifactId>asmeta.core</artifactId>
	<packaging>pom</packaging>
	<modules>
		<module>asmeta.cli</module>
		<module>asmeta.emf</module>
		<module>asmeta.parser/asmeta.parser</module>
		<module>asmeta.parser/asmeta.parser.test</module>
		<module>asmeta.parser/asmeta.parser.cli</module>
		<module>asmeta.simulator/asmeta.simulator</module>
		<module>asmeta.simulator/asmeta.simulator.test</module>
		<module>asmeta.simulator/asmeta.simulator.cli</module>
		<!-- missing asmeta.xt -->
	</modules>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.15.0</version>
				<configuration>
					<release>21</release>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>